...
                        style="@style/Theme.Promise.InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Task Title" />

                <EditText
                        android:id="@+id/task_name_input"
                        style="@style/Theme.Promise.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gray"
                        android:hint="@string/taskNameInput"
                        android:inputType="textPersonName" />
...
                        style="@style/Theme.Promise.InputLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Task Description" />

                <EditText
                        android:id="@+id/task_description_input"
                        style="@style/Theme.Promise.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="113dp"
                        android:gravity="start|top"
                        android:hint="@string/taskDesInput"
                        android:imeOptions="actionNext|actionDone|flagNoEnterAction"
...
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/taskEstimateInput"
                        android:imeOptions="actionNext|actionDone|flagNoEnterAction"
                        android:id="@+id/task_estimate_input" />

                <TextView
                        style="@style/Theme.Promise.InputLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/task_priority_input_label"
...
                <EditText
                        style="@style/Theme.Promise.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/task_priority_input"
                        android:hint="@string/taskPriorityInput" />

                <Button
                        android:id="@+id/create_task_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Edit Task"
                        android:textColor="#FFFFFF" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
