...

        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@color/gray_200">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Theme.Promise.CollapsingToolbarLayout"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/gap_lg">

            <TextView
                android:id="@+id/task_page_description"
                style="@style/Theme.Promise.TextAppearance.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Description"
                app:lineHeight="20sp" />

            <TextView
                android:id="@+id/task_page_priority"
                style="@style/Theme.Promise.TextAppearance.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Priority" />

...
                android:layout_marginBottom="@dimen/gap_md"
                android:text="ASSIGNEES"
                android:textColor="@color/gray_800"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_recycler_in_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>

...
